added thr main image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Cheff Portfolio</title>
+    <title>Chef Portfolio</title>
 
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" />
@@ -25,16 +25,23 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-        </header>
 
-        <section class="header-content">
-            <div class="header-text">
-                <h1></h1>
-                <!-- some icon -->
+
+
+            <div class="header-content">
+                <div class="header-text">
+                    <h1></h1>
+                    <!-- some icon -->
+                </div>
+    
+                <div class="main-banner">
+                    <img class="chef" src="img/chef.jpg" alt="">
+                </div>
             </div>
 
-            <div class="main-banner"></div>
-        </section>
+
+        </header>
+
         <!-- 
         thinking about some intro about robotic kitchen, maybe some video or something, open for suggestions -->
 
