some changes, put navigation into about and contact.html

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,19 @@
 </head>
 
 <body>
+
+    <nav>
+        <div class="logo">
+            <img src="img/logo.jpg" width="70px" alt="logo" />
+        </div>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="#">Testimonials</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
     <div class="contact-intro">
         <h2>We're happy to hear from you</h2>
     </div>
