--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@
                 </ul>
             </nav>
 
-
-
             <div class="header-content">
                 <div class="header-text">
                     <h1></h1>
                     <!-- some icon -->
                 </div>
-    
+
                 <div class="main-banner">
                     <img class="chef" src="img/chef.jpg" alt="">
                 </div>
@@ -64,13 +62,13 @@
             <div class="row">
                 <div class="inside-the-row">
                     <blockquote>
-                        Master Cheff is just awesome! I just launched a startup which
+                        Master Chef is just awesome! I just launched a startup which
                         leaves me with no time for cooking because I work basically work
                         20 hours a day and sleep like 4 hours, so Master Cheff is a
                         life-saver. Now that I got used to it, I couldn't live without my
                         daily meals!
 
-                        <cite><img src="img/Tesla.jpg" alt="Nikola Tesla" />Nikola
+                        <cite><img src="img/Tesla.jpg" width="260px" alt="Nikola Tesla" />Nikola
                             Tesla</cite>
                     </blockquote>
                 </div>
@@ -79,7 +77,7 @@
                         Inexpensive, healthy and great-tasting meals, delivered right to
                         my home. We have lots of food delivery here in Lisbon, but no one
                         comes even close to master cheff. Me and my family are so in love!
-                        <cite><img src="img/arwen.jpg" alt="Customer 2 photo" />Lady
+                        <cite><img src="img/arwen.jpg" width="200px" alt="Customer 2 photo" />Lady
                             Auren</cite>
                     </blockquote>
                 </div>
@@ -89,7 +87,7 @@
                         lot of them and ended up ordering only from Master Cheff and his
                         robotic kitchen. Best food in both west and east coast. Keep up
                         the great work!
-                        <cite><img src="img/chaplin.jpg" alt="Customer 3 photo" />Charlie
+                        <cite><img src="img/chaplin.jpg" width="200px" alt="Customer 3 photo" />Charlie
                             Chaplin</cite>
                     </blockquote>
                 </div>
