--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                     <img src="img/logo.jpg" width="70px" alt="logo" />
                 </div>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="#">Testimonials</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                     <a href="#">Home</a>
+                     <a href="about.html">About</a>
+                     <a href="#">Testimonials</a>
+                     <a href="contact.html">Contact</a>
                 </ul>
             </nav>
 
