trying to add linear gradient to main-banner image but it doesnt working

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class="main-banner">
-                    <img class="chef" src="img/chef.jpg" alt="">
+                    <img src="img/chef.jpg" width="900px" alt="">
                 </div>
             </div>
 
