--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header>
             <nav>
                 <div class="logo">
-                    <img src="img/logo.jpg" width="70px" alt="logo" />
+                    <img src="img/logo.jpg" alt="logo" />
                 </div>
                 <ul>
                      <a href="#">Home</a>
