changed some values in global.less, trying to find measures concerning font sizes

--- a/index.html
+++ b/index.html
@@ -19,22 +19,20 @@
                     <img src="img/logo.jpg" alt="logo" />
                 </div>
                 <ul>
-                     <a href="#">Home</a>
-                     <a href="about.html">About</a>
-                     <a href="#">Testimonials</a>
-                     <a href="contact.html">Contact</a>
+                    <a href="#">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="#">Testimonials</a>
+                    <a href="contact.html">Contact</a>
                 </ul>
             </nav>
 
             <div class="header-content">
-                <div class="header-text">
-                    <h1></h1>
-                    <!-- some icon -->
-                </div>
 
-                <div class="main-banner">
-                    <img src="img/chef.jpg" width="900px" alt="">
-                </div>
+                <img class="chef" src="img/chef.jpg" width="900px" alt="">
+
+                <h1>Say goodbye to cooking and cleaning.<br>Hello to super healthy meals at any time you can think of.
+                </h1>
+
             </div>
 
 
