added two buttons in header.less, not looking so good, will come back to style it better

--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
 
             <div class="header-content">
 
-                <img class="chef" src="img/chef.jpg" width="900px" alt="">
+                <div class="main-image"><img src="img/chef.jpg" width="900px" alt="">
+                    <div class="buttons">
+                            <button>I am hungry</button>
+                            <button>Show me more</button>
+                        </div>
+                </div>
+
+               
 
                 <h1>Say goodbye to cooking and cleaning.<br>Hello to super healthy meals at any time you can think of.
                 </h1>
