moved some content from about.html to index.html

--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
 
                 <div class="main-image"><img src="img/chef.jpg" width="900px" alt="">
                     <div class="buttons">
-                            <button>I am hungry</button>
-                            <button>Show me more</button>
-                        </div>
+                        <button>I am hungry</button>
+                        <button>Sign up</button>
+                    </div>
                 </div>
 
-               
 
-                <h1>Say goodbye to cooking and cleaning.<br>Hello to super healthy meals at any time you can think of.
+
+                <h1>Say goodbye to cooking and cleaning.
+                    <br>Hello to super healthy meals at any time you can think of.
                 </h1>
 
             </div>
@@ -47,6 +48,57 @@
 
         <!-- 
         thinking about some intro about robotic kitchen, maybe some video or something, open for suggestions -->
+
+
+        <section class="features">
+            <div class="inside-of-features">
+                <h2>Get food fast &mdash; not fast food</h2>
+                <p>
+                    I know you're always busy. No time for cooking. So let me take care
+                    of that, I am really good at it, I promise!
+                </p>
+            </div>
+
+            <div class="inside of features">
+                <div class="box1">
+                    <i class> some cool icon</i>
+                    <h3>Up to 365 days/year, 7 days/weak, 24 hours/day</h3>
+                    <p>
+                        Never cook again! I really mean that. I have created the world’s
+                        second robotic kitchen. Featuring an advanced, fully functional
+                        robot integrated into a beautifully designed, professional
+                        kitchen, it cooks with the skill and flair of a master chef”. It
+                        even “clears up after itself”
+                    </p>
+                </div>
+                <div class="box2">
+                    <i class> some cool icon</i>
+                    <h3>Ready in 3 minutes</h3>
+                    <p>
+                        You're only 3 minutes away from your delicious and super healthy
+                        meals delivered right to your home.
+                    </p>
+                </div>
+                <div class="box3">
+                    <i class> some cool icon</i>
+                    <h3>100% organic</h3>
+                    <p>
+                        I have my own plantation,vegetables are fresh, organic and local.
+                        Animals are raised without added hormones or antibiotics. Good for
+                        your health, the environment, and it also tastes better!
+                    </p>
+                </div>
+                <div class="box4">
+                    <i class> some cool icon</i>
+                    <h3>Order anything</h3>
+                    <p>
+                        I won't limit your creativity, which means you can order whatever
+                        you feel like. You can also choose from our menu containing over
+                        1000 delicious meals. Only limit is your imagination!
+                    </p>
+                </div>
+            </div>
+        </section>
 
 
         <section class="drum-kit">
