started styling home section in home.less

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <!-- 
         thinking about some intro about robotic kitchen, maybe some video or something, open for suggestions -->
 
+        <section class="home">
 
-        <section class="features">
-            <div class="inside-of-features">
+            <div class="intro-to-features">
                 <h2>Get food fast &mdash; not fast food</h2>
                 <p>
                     I know you're always busy. No time for cooking. So let me take care
@@ -59,8 +59,9 @@
                 </p>
             </div>
 
-            <div class="inside of features">
-                <div class="box1">
+
+            <div class="features">
+                <div class="inside-of-features">
                     <i class> some cool icon</i>
                     <h3>Up to 365 days/year, 7 days/weak, 24 hours/day</h3>
                     <p>
@@ -71,7 +72,7 @@
                         even “clears up after itself”
                     </p>
                 </div>
-                <div class="box2">
+                <div class="inside-of-features">
                     <i class> some cool icon</i>
                     <h3>Ready in 3 minutes</h3>
                     <p>
@@ -79,7 +80,7 @@
                         meals delivered right to your home.
                     </p>
                 </div>
-                <div class="box3">
+                <div class="inside-of-features">
                     <i class> some cool icon</i>
                     <h3>100% organic</h3>
                     <p>
@@ -88,7 +89,7 @@
                         your health, the environment, and it also tastes better!
                     </p>
                 </div>
-                <div class="box4">
+                <div class="inside-of-features">
                     <i class> some cool icon</i>
                     <h3>Order anything</h3>
                     <p>
