--- a/index.html
+++ b/index.html
@@ -114,42 +114,42 @@
 
 
         <div class="intro-to-testimonials">
-            <h3>Our customers can't live without us</h3>
-        </div>
+            <h3>Mine customers can't live without me</h3>
+        </div><br>
 
         <section class="testimonials">
 
             <div class="inside-of-testimonials">
-                <p>
+                <blockquote>
                     Master Chef is just awesome! I just launched a startup which
                     leaves me with no time for cooking because I work basically work
                     20 hours a day and sleep like 4 hours, so Master Cheff is a
                     life-saver. Now that I got used to it, I couldn't live without my
                     daily meals!
-                </p>
-                <img src="img/Tesla.jpg" width="100px" alt="Nikola Tesla"/>
+                </blockquote>
+                <img class="customers-photos" src="img/Tesla.jpg" width="150px" alt="Nikola Tesla"/>
                 <cite>Nikola Tesla</cite>
                 
             </div>
 
             <div class="inside-of-testimonials">
-                <p>
+                <blockquote>
                     Inexpensive, healthy and great-tasting meals, delivered right to
                     my home. We have lots of food delivery here in Lisbon, but no one
                     comes even close to master cheff. Me and my family are so in love!
-                </p>
-                <img src="img/arwen.jpg" width="100px" alt="Customer 2 photo"/>
+                </blockquote>
+                <img class="customers-photos" src="img/arwen.jpg" width="140px" alt="Customer 2 photo"/>
                 <cite>Lady Arwen</cite>
             </div>
             
 
             <div class="inside-of-testimonials">
-                <p>I was looking for a quick and easy food in Zihuatanejo. I tried a
+                <blockquote>I was looking for a quick and easy food in Zihuatanejo. I tried a
                     lot of them and ended up ordering only from Master Cheff and his
                     robotic kitchen. Best food in both west and east coast. Keep up
                     the great work!
-                </p>
-                <img src="img/chaplin.jpg" width="100px" alt="Customer 3 photo" />
+                </blockquote>
+                <img class="customers-photos" src="img/chaplin.jpg" width="150px" alt="Customer 3 photo" />
                 <cite>Charlie Chaplin</cite>
             </div>
 
@@ -177,7 +177,7 @@
             </div>
             <div class="footer-row2">
                 <p>
-                    Copyright &copy; 2010 by Master Cheff. All rights reserved.
+                    Copyright &copy; 2019 by Master Cheff. All rights reserved.
                 </p>
             </div>
         </footer>
