--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Chef Portfolio</title>
 
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="css/index.css" rel="stylesheet" />
 </head>
 
@@ -127,9 +129,9 @@
                     life-saver. Now that I got used to it, I couldn't live without my
                     daily meals!
                 </blockquote>
-                <img class="customers-photos" src="img/Tesla.jpg" width="150px" alt="Nikola Tesla"/>
+                <img class="customers-photos" src="img/Tesla.jpg" width="150px" alt="Nikola Tesla" />
                 <cite>Nikola Tesla</cite>
-                
+
             </div>
 
             <div class="inside-of-testimonials">
@@ -138,10 +140,10 @@
                     my home. We have lots of food delivery here in Lisbon, but no one
                     comes even close to master cheff. Me and my family are so in love!
                 </blockquote>
-                <img class="customers-photos" src="img/arwen.jpg" width="140px" alt="Customer 2 photo"/>
+                <img class="customers-photos" src="img/arwen.jpg" width="140px" alt="Customer 2 photo" />
                 <cite>Lady Arwen</cite>
             </div>
-            
+
 
             <div class="inside-of-testimonials">
                 <blockquote>I was looking for a quick and easy food in Zihuatanejo. I tried a
@@ -156,8 +158,8 @@
         </section>
 
         <footer>
-            <div class="footer-row">
-                <div class="row-inside-footer">
+            <div class="row-footer">
+                <div class="row-inside-of-footer">
                     <ul class="footer-nav">
                         <li><a href="#">About us</a></li>
                         <li><a href="#">Blog</a></li>
@@ -166,21 +168,22 @@
                         <li><a href="#">Android App</a></li>
                     </ul>
                 </div>
-                <div class="row-inside-footer">
+                <div class="row-inside-of-footer">
                     <ul class="social-links">
-                        <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-                        <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-                        <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
-                        <li><a href="#"><i class="ion-social-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-facebook-square fa-3x"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter-square fa-3x"></i></a></li>
+                        <li><a href="#"><i class="fab fa-google-plus-square fa-3x"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram fa-3x"></i></a></li>
                     </ul>
                 </div>
             </div>
-            <div class="footer-row2">
-                <p>
-                    Copyright &copy; 2019 by Master Cheff. All rights reserved.
-                </p>
-            </div>
         </footer>
+        <div class="copyright">
+            <small>
+                Copyright &copy; 2019 by Master Chef. All rights reserved.
+            </small>
+        </div>
+
     </div>
 </body>
 
