added icons in home section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="css/index.css" rel="stylesheet" />
 </head>
 
@@ -38,7 +38,6 @@
                 </div>
 
 
-
                 <h1>Say goodbye to cooking and cleaning.
                     <br>Hello to super healthy meals at any time you can think of.
                 </h1>
@@ -64,7 +63,7 @@
 
             <div class="features">
                 <div class="inside-of-features">
-                    <i class> some cool icon</i>
+                    <i class="fas fa-robot fa-5x"></i>
                     <h3>Up to 365 days/year, 7 days/weak, 24 hours/day</h3>
                     <p>
                         Never cook again! I really mean that. I have created the world’s
@@ -75,7 +74,7 @@
                     </p>
                 </div>
                 <div class="inside-of-features">
-                    <i class> some cool icon</i>
+                    <i class="fas fa-clock fa-5x"></i>
                     <h3>Ready in 3 minutes</h3>
                     <p>
                         You're only 3 minutes away from your delicious and super healthy
@@ -83,7 +82,7 @@
                     </p>
                 </div>
                 <div class="inside-of-features">
-                    <i class> some cool icon</i>
+                    <i class="fas fa-carrot fa-5x"></i>
                     <h3>100% organic</h3>
                     <p>
                         I have my own plantation,vegetables are fresh, organic and local.
@@ -92,7 +91,7 @@
                     </p>
                 </div>
                 <div class="inside-of-features">
-                    <i class> some cool icon</i>
+                    <i class="fab fa-first-order fa-5x"></i>
                     <h3>Order anything</h3>
                     <p>
                         I won't limit your creativity, which means you can order whatever
