--- a/about.html
+++ b/about.html
@@ -8,22 +8,24 @@
     <title>About</title>
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="css/index.css" rel="stylesheet" />
 </head>
 
 <body>
-    <nav>
-        <div class="logo">
-            <img src="img/logo.jpg" width="70px" alt="logo" />
-        </div>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="#">Testimonials</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="img/logo.jpg" alt="logo" />
+            </div>
+            <ul>
+                <a href="#">Home</a>
+                <a href="about.html">About</a>
+                <a href="#">Testimonials</a>
+                <a href="contact.html">Contact</a>
+            </ul>
+        </nav>
+    </header>
 
     <section class="section-meals">
         <div class="meals-showcase1">
