added navigation links to contact html

--- a/about.html
+++ b/about.html
@@ -13,19 +13,19 @@
 </head>
 
 <body>
-    <header>
+    <section class="navigation-for-about">
         <nav>
             <div class="logo">
                 <img src="img/logo.jpg" alt="logo" />
             </div>
             <ul>
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="#">Testimonials</a>
                 <a href="contact.html">Contact</a>
             </ul>
         </nav>
-    </header>
+    </section>
 
     <section class="section-meals">
         <div class="meals-showcase1">
