--- a/contact.html
+++ b/contact.html
@@ -12,17 +12,19 @@
 
 <body>
 
-    <nav>
-        <div class="logo">
-            <img src="img/logo.jpg" width="70px" alt="logo" />
-        </div>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="#">Testimonials</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+    <section class="navigation-for-contact">
+        <nav>
+            <div class="logo">
+                <img src="img/logo.jpg" alt="logo" />
+            </div>
+            <ul>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="#">Testimonials</a>
+                <a href="contact.html">Contact</a>
+            </ul>
+        </nav>
+    </section>
 
     <div class="contact-intro">
         <h2>We're happy to hear from you</h2>
