--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-
     <section class="navigation-for-contact">
         <nav>
             <div class="logo">
@@ -26,10 +25,24 @@
         </nav>
     </section>
 
-    <div class="contact-intro">
-        <h2>We're happy to hear from you</h2>
-    </div>
-    <section class="section-form">
+   
+    <div class="contact-section">
+
+        <h1>Contact Us</h1>
+        <div class="border"></div>
+        <form class="contact-form" action="index.html" method="post">
+          <input type="text" class="contact-form-text" placeholder="Your name">
+          <input type="email" class="contact-form-text" placeholder="Your email">
+          <input type="text" class="contact-form-text" placeholder="Your phone">
+          <textarea class="contact-form-text" placeholder="Your message"></textarea>
+          <input type="submit" class="contact-form-btn" value="Send">
+        </form>
+      </div>
+      
+
+
+
+    <!-- <section class="section-form">
         <div class="form-container">
             <form method="post" action="#" class="contact-form">
                 <div class="inside-form-container">
@@ -86,7 +99,7 @@
             </form>
 
         </div>
-    </section>
+    </section> -->
 </body>
 
 </html>
