--- a/about.html
+++ b/about.html
@@ -31,22 +31,22 @@
         <div class="meals-showcase1">
             <div class="meals-showcase1-inner">
                 <figure class="meal-photo">
-                    <img src="img/1.jpg" alt="Korean bibimbap with egg and vegetables" />
+                    <img src="img/1.jpg" width="400px" alt="Korean bibimbap with egg and vegetables" />
                 </figure>
             </div>
             <div class="meals-showcase1-inner">
                 <figure class="meal-photo">
-                    <img src="img/2.jpg" alt="Simple italian pizza with cherry tomatoes" />
+                    <img src="img/2.jpg" width="400px" alt="Simple italian pizza with cherry tomatoes" />
                 </figure>
             </div>
             <div class="meals-showcase1-inner">
                 <figure class="meal-photo">
-                    <img src="img/3.jpg" alt="Chicken breast steak with vegetables" />
+                    <img src="img/3.jpg" width="400px" alt="Chicken breast steak with vegetables" />
                 </figure>
             </div>
             <div class="meals-showcase1-inner">
                 <figure class="meal-photo">
-                    <img src="img/4.jpg" alt="Autumn pumpkin soup" />
+                    <img src="img/4.jpg" width="400px" alt="Autumn pumpkin soup" />
                 </figure>
             </div>
         </div>
@@ -54,22 +54,22 @@
         <div class="meals-showcase2">
             <div class="meals-showcase2-inner">
                 <figure class="meal-photo">
-                    <img src="img/5.jpg" alt="Paleo beef steak with vegetables" />
+                    <img src="img/5.jpg" width="400px" alt="Paleo beef steak with vegetables" />
                 </figure>
             </div>
             <div class="meals-showcase2-inner">
                 <figure class="meal-photo">
-                    <img src="img/6.jpg" alt="Healthy baguette with egg and vegetables" />
+                    <img src="img/6.jpg" width="400px" alt="Healthy baguette with egg and vegetables" />
                 </figure>
             </div>
             <div class="meals-showcase2-inner">
                 <figure class="meal-photo">
-                    <img src="img/7.jpg" alt="Burger with cheddar and bacon" />
+                    <img src="img/7.jpg" width="400px" alt="Burger with cheddar and bacon" />
                 </figure>
             </div>
             <div class="meals-showcase2-inner">
                 <figure class="meal-photo">
-                    <img src="img/8.jpg" alt="Granola with cherries and strawberries" />
+                    <img src="img/8.jpg" width="400px" alt="Granola with cherries and strawberries" />
                 </figure>
             </div>
         </div>
