--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="css/index.css" rel="stylesheet" />
+    <script src="scripts.js" async></script>
 </head>
 
 <body>
     <div class="wrapper">
         <header>
-            <nav>
+            <nav class="primary-nav">
                 <div class="logo">
                     <img src="img/logo.jpg" alt="logo" />
                 </div>
@@ -25,6 +26,7 @@
                     <a href="about.html">About</a>
                     <a href="#">Testimonials</a>
                     <a href="contact.html">Contact</a>
+                    <li class="call-me"><a href="#"></a>Call me!</li>
                 </ul>
             </nav>
 
