added some styles to first line of h1 in header.less

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="about.html">About</a>
                     <a href="#">Testimonials</a>
                     <a href="contact.html">Contact</a>
-                    <li class="call-me"><a href="#"></a>Call me!</li>
+                    <li class="call-me"><a href="#"></a>I am man for the job!</li>
                 </ul>
             </nav>
 
