wrote article about the robot and some details

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="row-footer">
                 <div class="row-inside-of-footer">
                     <ul class="footer-nav">
-                        <li><a href="#">About us</a></li>
+                        <li><a href="#">About</a></li>
                         <li><a href="#">Blog</a></li>
                         <li><a href="#">Press</a></li>
                         <li><a href="#">iOS App</a></li>
