--- a/about.html
+++ b/about.html
@@ -26,6 +26,34 @@
             </ul>
         </nav>
     </section>
+    <div class="about-the-robot">
+        <article>
+        <br><br>
+       <h3>The Measure Of A Man</h3>
+<br><br>
+        <p>So you are probably asking yourself how can some cook build such sophisticated robot that can cook like
+            some of the best chefs in world? Well you not the only one! Since I was a little kid I always wanted to
+            create my robot that can learn like ordinary human, watching and listening.
+            <br><br>
+            After 20 years of cooking and making some extraordinary dishes I have decided to pass on my knowledge
+            to a robot because the robot will live forever so there is no risk of losing such precious knowledge on
+            making some amazing food :)
+            <br><br>
+            The robot is composed of 24.6 kilograms of tripolymer composites, 11.8 kilograms of molybdenum-cobalt alloys
+            and 1.3 kilograms of bioplast sheeting.
+
+            It was built with an ultimate storage capacity of eight hundred quadrillion Bits (approximately 100,000
+            terabytes) and a
+            total linear computational speed rated at sixty trillion operations per second.
+            <br><br>
+            However, I later augmented his computational speed by converting his interlink sequencer to an
+            asynchronous mode of operation, removing the performance constraint created by virtue of having space
+            between his positronic links.
+            <br><br>
+            I could go an on but you wouldn't understand a thing, all I can say is this: It just works!
+        </p>
+    </article>
+    </div>
 
     <section class="section-meals">
         <div class="meals-showcase1">
