included some links in navigation

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                     <img src="img/logo.jpg" alt="logo" />
                 </div>
                 <ul>
-                    <a href="#">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="about.html">About</a>
-                    <a href="#">Testimonials</a>
+                    <a href="index.html">Testimonials</a>
                     <a href="contact.html">Contact</a>
                     <li class="call-me"><a href="#"></a>Hire me!</li>
                 </ul>
