added media queries for mobile phones and other tweaks for responsivity, for index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="features">
                 <div class="inside-of-features">
-                    <i class="fas fa-robot fa-5x"></i>
+                    <i class="fas fa-robot fa-5x"></i><br><br>
                     <h3>Up to 365 days/year, 7 days/weak, 24 hours/day</h3>
                     <p>
                         Never cook again! I really mean that. I have created the world’s
@@ -70,7 +70,7 @@
                     </p>
                 </div>
                 <div class="inside-of-features">
-                    <i class="fas fa-clock fa-5x"></i>
+                    <i class="fas fa-clock fa-5x"></i><br><br>
                     <h3>Ready in 3 minutes</h3>
                     <p>
                         You're only 3 minutes away from your delicious and super healthy
@@ -78,7 +78,7 @@
                     </p>
                 </div>
                 <div class="inside-of-features">
-                    <i class="fas fa-carrot fa-5x"></i>
+                    <i class="fas fa-carrot fa-5x"></i><br><br>
                     <h3>100% organic</h3>
                     <p>
                         I have my own plantation,vegetables are fresh, organic and local.
@@ -87,7 +87,7 @@
                     </p>
                 </div>
                 <div class="inside-of-features">
-                    <i class="fab fa-first-order fa-5x"></i>
+                    <i class="fab fa-first-order fa-5x"></i><br><br>
                     <h3>Order anything</h3>
                     <p>
                         I won't limit your creativity, which means you can order whatever
@@ -108,7 +108,7 @@
         </section>
         <div class="intro-to-testimonials">
             <h3>Mine customers can't live without me</h3>
-        </div><br>
+        </div>
 
         <section class="testimonials">
             <div class="inside-of-testimonials">
