included links in navigation

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             <ul>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="#">Testimonials</a>
+                <a href="index.html">Testimonials</a>
                 <a href="contact.html">Contact</a>
             </ul>
         </nav>
