added smooth scroll in scripts.js

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     <img src="img/logo.jpg" alt="logo" />
                 </div>
                 <ul>
-                    <a href="index.html">Home</a>
-                    <a href="about.html">About</a>
-                    <a href="index.html">Testimonials</a>
-                    <a href="contact.html">Contact</a>
+                    <a class  href="index.html">Home</a>
+                    <a class  href="about.html">About</a>
+                    <a class="section-link" href="#">Testimonials</a>
+                    <a class href="contact.html">Contact</a>
                     <li class="call-me"><a href="#"></a>Hire me!</li>
                 </ul>
             </nav>
