--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <img src="img/logo.jpg" alt="logo" />
                 </div>
                 <ul>
-                    <a class  href="index.html">Home</a>
-                    <a class  href="about.html">About</a>
+                    <a class href="index.html">Home</a>
+                    <a class href="about.html">About</a>
                     <a class="section-link" href="#">Testimonials</a>
                     <a class href="contact.html">Contact</a>
                     <li class="call-me"><a href="#"></a>Hire me!</li>
@@ -119,7 +119,7 @@
                     life-saver. Now that I got used to it, I couldn't live without my
                     daily meals!
                 </blockquote>
-                <img class="customers-photos" src="img/Tesla.jpg" width="150px" alt="Nikola Tesla" />
+                <img class="customers-photos" src="img/Tesla2.jpg" width="170" height="150" alt="Nikola Tesla" />
                 <cite>Nikola Tesla</cite>
             </div>
             <div class="inside-of-testimonials">
@@ -138,7 +138,7 @@
                     robotic kitchen. Best food in both west and east coast. Keep up
                     the great work!
                 </blockquote>
-                <img class="customers-photos" src="img/chaplin.jpg" width="150px" alt="Customer 3 photo" />
+                <img class="customers-photos" src="img/chaplin.jpg" width="160px" alt="Customer 3 photo" />
                 <cite>Charlie Chaplin</cite>
             </div>
         </section>
