one grammar correction

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
         </section>
         <div class="intro-to-testimonials">
-            <h3>Mine customers can't live without me</h3>
+            <h3>My customers can't live without me</h3>
         </div>
 
         <section class="testimonials">
