some grammar corrctions

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="inside-of-testimonials">
                 <blockquote>
                     Master Chef is just awesome! I just launched a startup which
-                    leaves me with no time for cooking because I work basically work
+                    leaves me with no time for cooking because I work basically
                     20 hours a day and sleep like 4 hours, so Master Cheff is a
                     life-saver. Now that I got used to it, I couldn't live without my
                     daily meals!
