some code formating

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -29,10 +28,8 @@
                     <li class="call-me"><a href="#"></a>Hire me!</li>
                 </ul>
             </nav>
-
             <div class="header-content">
-
-                <div class="main-image"><img src="img/chef.jpg" width="1000px" alt="">
+                <div class="main-image"><img src="img/chef.jpg" width="1000px" alt="master chef">
                     <div class="buttons">
                         <button>I am hungry</button>
                         <button>Sign up</button>
@@ -49,7 +46,6 @@
         thinking about some intro about robotic kitchen, maybe some video or something, open for suggestions -->
 
         <section class="home">
-
             <div class="intro-to-features">
                 <h2>Get food fast &mdash; not fast food</h2>
                 <p>
@@ -131,7 +127,6 @@
                 <img class="customers-photos" src="img/arwen.jpg" width="140px" alt="Customer 2 photo" />
                 <cite>Lady Arwen</cite>
             </div>
-
             <div class="inside-of-testimonials">
                 <blockquote>I was looking for a quick and easy food in Zihuatanejo. I tried a
                     lot of them and ended up ordering only from Master Cheff and his
@@ -170,5 +165,4 @@
         </div>
     </div>
 </body>
-
 </html>
