--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="css/index.css" rel="stylesheet" />
 </head>
+
 <body>
     <section class="navigation-for-about">
         <nav>
@@ -27,8 +29,8 @@
     <div class="about-the-robot">
         <article>
             <br><br>
-            <h3>The Measure Of A Man</h3>
-            <br><br>
+            <h3>The Measure Of A Man</h3><br>
+
             <p>So you are probably asking yourself how can some cook build such sophisticated robot that can cook like
                 some of the best chefs in world? Well you not the only one! Since I was a little kid I always wanted to
                 create my robot that can learn like ordinary human, watching and listening.
@@ -38,8 +40,7 @@
                 making some amazing food :)
                 <br><br>
                 The robot is composed of 24.6 kilograms of tripolymer composites, 11.8 kilograms of molybdenum-cobalt
-                alloys
-                and 1.3 kilograms of bioplast sheeting.
+                alloys and 1.3 kilograms of bioplast sheeting.
 
                 It was built with an ultimate storage capacity of eight hundred quadrillion Bits (approximately 100,000
                 terabytes) and a
@@ -102,4 +103,5 @@
         </div>
     </section>
 </body>
+
 </html>
