created another component, features.js

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="css/index.css" rel="stylesheet" />
     <script src="scripts.js" async></script>
     <script src="components/testimonials.js" async></script>
+    <script src="components/features.js" async></script>
 </head>
 
 <body>
@@ -90,6 +91,15 @@
                         I won't limit your creativity, which means you can order whatever
                         you feel like. You can also choose from our menu containing over
                         1000 delicious meals. Only limit is your imagination!
+                    </p>
+                </div>
+                <div class="inside-of-features">
+                    <i class="fas fa-carrot fa-5x"></i><br><br>
+                    <h3>100% organic</h3>
+                    <p>
+                        I have my own plantation,vegetables are fresh, organic and local.
+                        Animals are raised without added hormones or antibiotics. Good for
+                        your health, the environment, and it also tastes better!
                     </p>
                 </div>
             </div>
