added new page called news.html and for that page I created the API that fetches world news

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="css/index.css" rel="stylesheet" />
-    <script src="WebApi.js" async></script>
+
 </head>
 
 <body>
@@ -24,6 +24,7 @@
                 <a href="about.html">About</a>
                 <a href="index.html">Testimonials</a>
                 <a href="contact.html">Contact</a>
+                <a href="news.html">News</a>
             </ul>
         </nav>
     </section>
@@ -102,17 +103,6 @@
             </div>
         </div>
     </section>
-
-
-
-<main></main>
-
-
-
-
-
-
-
 </body>
 
 </html>
