--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <a class href="about.html">About</a>
                     <a class="section-link" href="#">Testimonials</a>
                     <a class href="contact.html">Contact</a>
+                    <a href="news.html">News</a>
                     <li class="call-me"><a href="#"></a>Hire me!</li>
                 </ul>
             </nav>
