--- a/news.html
+++ b/news.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact</title>
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="css/index.css" rel="stylesheet" />
+    <title>News</title>
 </head>
+
 <body>
-    <section class="navigation-for-contact">
+    <section class="navigation-for-news">
         <nav>
             <div class="logo">
                 <img src="img/logo.jpg" alt="logo" />
@@ -23,16 +27,11 @@
             </ul>
         </nav>
     </section>
-    
-    <div class="contact-section">
-        <div class="border"></div>
-        <form class="contact-form" action="index.html" method="post">
-            <input type="text" class="contact-form-text" placeholder="Your name">
-            <input type="email" class="contact-form-text" placeholder="Your email">
-            <input type="text" class="contact-form-text" placeholder="Your phone">
-            <textarea class="contact-form-text" placeholder="Your message"></textarea>
-            <input type="submit" class="contact-form-btn" value="Send">
-        </form>
-    </div>
+
+
+    <main></main>
+
+    <script src="./WebApi.js" type="module"></script>
 </body>
+
 </html>
